<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddTeamActivity"
        android:id = "@+id/addTeamLayout"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
        android:id="@+id/exit"
        android:layout_width="125dp"
        android:layout_height="47dp"
        android:text="BACK"
        app:backgroundTint="#000000"
        app:icon="?attr/actionModeCloseDrawable" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="Add a Team:"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/teamname"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Team Name:">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTeamname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTeamType"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Team Type">

        <AutoCompleteTextView
            android:id="@+id/tvTeamType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/teamPassword"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:hint="Create Password:">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTeamPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000"
                android:text="ADD TEAM"
                android:textColor="#FFFFFF" />

    </LinearLayout>
</FrameLayout>

