<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id = "@+id/home"
        android:title="Home"
        android:icon = "@drawable/home"/>
    <item
        android:id = "@+id/workout"
        android:title="Workout"
        android:icon = "@drawable/whistle"/>
    <item
        android:id = "@+id/game"
        android:title="Game"
        android:icon = "@drawable/basketball"/>
    <item
        android:id = "@+id/stats"
        android:title="Stats"
        android:icon = "@drawable/stats"/>
    <item
        android:id = "@+id/profile"
        android:title="Profile"
        android:icon = "@drawable/person"/>
</menu>